@@ -28,6 +28,7 @@
 
 (Tim Donohue)
  - [2433852] Add File Format Descriptions to XMLUI 1.5.x
+ - [2462293] Enable Google Sitemaps for XMLUI
 
 1.5.1 final
 ===========
